--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "obsidian": "https://github.com/obsidianmd/obsidian-api/tarball/master",
+    "prettier": "^2.8.1",
     "rollup": "^2.32.1",
-    "vitest": "^0.25.7",
-    "prettier": "^2.8.1"
+    "vitest": "^3.1.2"
   },
   "dependencies": {
     "obsidian-daily-notes-interface": "^0.9.2"
